# gwb

./: CMakeLists.txt  README.md
euler/: CMakeLists.txt  addhe.c  funcs.h  gwb.h  params.h
setop/: CMakeLists.txt
split/: CMakeLists.txt  params.h
